--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-dev-utils": "^4.1.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
+    "react-redux-loading-bar": "^3.1.1",
     "react-router-dom": "^4.2.2",
     "react-swipe": "^5.1.0",
     "redux": "^3.7.2",
